# dtxt

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
src/dtxt/: __init__.py  _config.py  _util.py  d2t.py  entities.py  infer.py  prompts.py  roundtrip.py  schema.py  t2d.py
src/dtxt/backends/: __init__.py  anthropic.py  base.py  llamacpp.py  mock.py  openai.py  sentence_transformers.py
tests/: conftest.py  test_backends_anthropic.py  test_backends_llamacpp.py  test_backends_mock.py  test_backends_openai.py  test_backends_sentence_transformers.py  test_config.py  test_d2t.py  test_entities.py  test_infer.py  test_roundtrip.py  test_schema.py  test_t2d.py
