[project]
name = "dtxt"
version = "0.0.1"
description = "Schema-centric bidirectional conversion between text and structured data"
readme = "README.md"
authors = [
    { name = "pillyshi", email = "pillyshi21@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
llamacpp = ["llama-cpp-python>=0.3"]
all = ["dtxt[openai,anthropic,llamacpp]"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.0",
    "ruff>=0.6",
    "types-jsonschema>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
packages = ["dtxt"]
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that call a real LLM backend (excluded by default)",
]
addopts = "-m 'not integration'"
