[project]
name = "dtxt"
version = "0.7.0"
description = "Schema-centric bidirectional conversion between text and structured data"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "pillyshi", email = "pillyshi21@gmail.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/pillyshi/dtxt"
Repository = "https://github.com/pillyshi/dtxt"
Issues = "https://github.com/pillyshi/dtxt/issues"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.40"]
llamacpp = ["llama-cpp-python>=0.3"]
all = ["dtxt[openai,anthropic,llamacpp]"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.0",
    "ruff>=0.6",
    "types-jsonschema>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
packages = ["dtxt"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*", "llama_cpp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that call a real LLM backend (excluded by default)",
]
addopts = "-m 'not integration'"
